# rust-99-problems

./: Cargo.toml  README.md
p01/: Cargo.toml
p01/src/: lib.rs
p02/: Cargo.toml
p02/src/: lib.rs
p03/: Cargo.toml
p03/src/: lib.rs
p04/: Cargo.toml
p04/src/: lib.rs
p05/: Cargo.toml
p05/src/: lib.rs
p06/: Cargo.toml
p06/src/: lib.rs
p07/: Cargo.toml
p07/src/: lib.rs
p08/: Cargo.toml
p08/src/: lib.rs
p09/: Cargo.toml
p09/src/: lib.rs
p10/: Cargo.toml
p10/src/: lib.rs
p11/: Cargo.toml
p11/src/: lib.rs
p12/: Cargo.toml
p12/src/: lib.rs
p13/: Cargo.toml
p13/src/: lib.rs
p14/: Cargo.toml
p14/src/: lib.rs
p15/: Cargo.toml
p15/src/: lib.rs
p16/: Cargo.toml
p16/src/: lib.rs
p17/: Cargo.toml
p17/src/: lib.rs
p18/: Cargo.toml
p18/src/: lib.rs
p19/: Cargo.toml
p19/src/: lib.rs
p20/: Cargo.toml
p20/src/: lib.rs
p21/: Cargo.toml
p21/src/: lib.rs
p22/: Cargo.toml
p22/src/: lib.rs
p23/: Cargo.toml
p23/src/: lib.rs
p24/: Cargo.toml
p24/src/: lib.rs
p25/: Cargo.toml
p25/src/: lib.rs
p31/: Cargo.toml
p31/src/: lib.rs
p32/: Cargo.toml
p32/src/: lib.rs
p33/: Cargo.toml
p33/src/: lib.rs
p34/: Cargo.toml
p34/src/: lib.rs
p35/: Cargo.toml
p35/src/: lib.rs
p36/: Cargo.toml
p36/src/: lib.rs
p37/: Cargo.toml
p37/src/: lib.rs
p38/: Cargo.toml
p38/src/: lib.rs
p39/: Cargo.toml
p39/src/: lib.rs
p40/: Cargo.toml
p40/src/: lib.rs
p41/: Cargo.toml
p41/src/: lib.rs
p46/: Cargo.toml
p46/src/: lib.rs
p47/: Cargo.toml
p47/src/: lib.rs
p49/: Cargo.toml
(+1 files in other folders)
